--- a/provisioning/restart-daq.yml
+++ b/provisioning/restart-daq.yml
@@ -1,9 +1,12 @@
 ---
 - hosts: pysparc
   tasks:
+    - name: stop pysparc
+      supervisorctl: name=pysparc state=stopped
+
     - name: restart redis-server
       service: name=redis-server state=restarted
       become: yes
 
     - name: restart pysparc
-      supervisorctl: name=pysparc state=restarted
+      supervisorctl: name=pysparc state=started
