--- a/provisioning/apt-upgrade.yml
+++ b/provisioning/apt-upgrade.yml
@@ -1,13 +1,16 @@
 - name: Safe-upgrade packages
   apt: upgrade=safe
   become: yes
+  tags: upgrade
 
 - name: Check if reboot is necessary
   stat: path=/var/run/reboot-required
   register: p
+  tags: upgrade
 
 # if path p is a regular file, trigger reboot
 - name: Flag a reboot if necessary
   command: /bin/true
   when: p.stat.isreg is defined
   notify: reboot
+  tags: upgrade
